templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-bembel
spec:
  rules:
    - host: bembel.party
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  name: http
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - bembel.party
      secretName: app-cert
